[tool.pyright]
executionEnvironments = [{ root = "back" }]

[tool.black]
line-length = 88
skip-string-normalization = false
preview = false
skip-magic-trailing-comma = true
safe = true
# extend-exclude = '''
# /(
#   some_folder_here
#
# )/
# '''

[tool.isort]
py_version = "311"
profile = "black"
atomic = true             # `true` cuando la versión de python target y que corre isort es la misma
lines_after_imports = 2
filter_files = true
skip_gitignore = true
combine_as_imports = true # Revisar
# known_third_party = []
known_first_party = [
    "users",
    "app",
    "back",
    "domains",
] # Ajustar en cada proyecto


[tool.pytest.ini_options]
addopts = "--strict-markers"
DJANGO_SETTINGS_MODULE = "back.settings"
python_files = ["test_*.py"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[build-system]
requires = ["setuptools==65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aigar"
version = "1.0.0"
authors = [{ name = "iCarto", email = "info@icarto.es" }]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Private :: Do Not Upload",
]
requires-python = "==3.11.*"
dependencies = [
    "Django==4.2",
    "django-cors-headers==3.14.0",
    "django-environ==0.10.0",
    "django-filter==23.1",
    "django-spa==0.3.6",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.2.2",
    "drf-extensions==0.7.1",
]

# https://stackoverflow.com/questions/75490231/
[project.optional-dependencies]
test = [
    "pytest==7.4.0",
    "pytest-django==4.5.2",
    "pytest-cov==4.1.0",
    "selenium==4.8.3",
    "webdriver-manager==3.8.6",
    "factory_boy==3.3.0",
]
dev = [
    "django-debug-toolbar==4.0.0",
    "django-extensions==3.2.1",
    "vulture==2.7",
    # "aigar[test]",
]

all = ["aigar[dev, test]"]

[tool.setuptools]
package-dir = { "aigar" = "back" }
include-package-data = true

[tool.setuptools.package-data]
# *.css *.woff *.svg *.js *.gif *.ico *.png *.jpg *.html *.js.map
"aigar.static" = ["**"]
"aigar.templates" = ["**"]

[tool.vulture]
# Configuration for vulture: https://github.com/jendrikseipp/vulture
# Install in your virtual environment and run:
# python -m vulture | tail -r | less
# The below configuration tries to remove some false positives, but there are
# still many, for example for model properties used only in templates.
# See also:
# https://adamj.eu/tech/2023/07/12/django-clean-up-unused-code-vulture/
exclude = ["*/settings.py", "*/settings/*.py", "*/migrations/*.py"]
ignore_decorators = [
    # Django
    "@receiver",
    "@register.filter",
    "@register.inclusion_tag",
    "@register.simple_tag",
    # django.contrib.admin
    "@admin.action",
    "@admin.display",
    "@admin.register",
    # pytest
    "@pytest.fixture",
    "@factory.post_generation",
]
ignore_names = [
    # Django
    "*Config",     # AppConfig subclasses
    "*Middleware",
    "clean_*",
    "Meta",
    "urlpatterns",
    # django.contrib.admin
    "get_extra",
    "get_fieldsets",
    "has_add_permission",
    "has_change_permission",
    "has_delete_permission",
    "has_view_permission",
    "lookups",

]
paths = ["back"]
sort_by_size = true
verbose = true
min_confidence = 0
